Contract Configurator 1.30.0
- Recompile against KSP 1.10.1.
- Localization support.
- Added Format() function to expressions to support better contract pack localization.
- Partial translation for Chinese Simplified (thanks tinygrox).
- Significant cleanup of string addition to reduce garbage generation.
- Support all tracking station object size classes up to I in SpawnVessel.
- Added Mission Control icons for Sentinel (KSP 1.3) and Robotics (Breaking Ground) stock contracts.
- Allow apostrophe in AgentParser, fixes Kerbin-Side Jobs.
- Improved some validation in Requirement nodes to throw certain errors at contract validation time instead of at run-time.
- Fixed issue where biomes without a Celestial Body (targetBody) specified weren't smart enough to figure out which body they were for.

Contract Configurator 1.29.0
- Recompile against KSP 1.9.1.
- Fixed various vessel spawning issues.

Contract Configurator 1.28.3
- More changes to AgentParser, now commas are disallowed as part of agent names (thanks Tonas1997).
- Fixed requirements being regenerated incorrectly on some contracts, resolves issues with "flickering" of contracts in mission control (thanks severedsolo).

Contract Configurator 1.28.2
- Allowed a wider range of Agent names to be parsed by the AgentParser (thanks Morphisor244).
- Add ModuleManager patch to fix old Agent definitions with a missing title (thanks Tonka Crash).

Contract Configurator 1.28.1
- Added new AgentParser (allows for assigning a random agency through expressions).
- Merged change to improve accuracy of great circle distance in contract distance calculations (thanks pap1723).
- Merged change to fix issues with certain celestial body progress requirements not working correctly for the manned/unmanned checks (thanks SirMortimer).
- Fixed issue with planet packs that renamed Kerbin displaying the name in lower case (thanks TheSpaceDad).