@@ -3,6 +3,7 @@ Contract Configurator 1.30.0
 - Localization support.
 - Added Format() function to expressions to support better contract pack localization.
 - Partial translation for Chinese Simplified (thanks tinygrox).
+- Support for Breaking Ground robotic arm science in science system.
 - Significant cleanup of string addition to reduce garbage generation.
 - Support all tracking station object size classes up to I in SpawnVessel.
 - Added Mission Control icons for Sentinel (KSP 1.3) and Robotics (Breaking Ground) stock contracts.
